[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enhance-primers-with-ssr"
version = "0.1.0"
description = "Enhance primer TSV files with SSR metadata from MISA and Primer3 outputs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Orlance Verano" }
]
keywords = ["bioinformatics", "misa", "primer3", "primers", "ssr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pandas>=1.5"
]

[project.scripts]
enhance-primers-with-ssr = "enhance_primers_with_ssr.enhance_primers_with_ssr:main"

[tool.setuptools.packages.find]
include = ["enhance_primers_with_ssr*"]
